feat: sidebar 样式部分完成

--- a/src/assets/scss/variable.scss
+++ b/src/assets/scss/variable.scss
@@ -1,3 +1,10 @@
-$bg:#283443;
-$light_gray:#fff;
+$bg: #283443;
+$light_gray: #fff;
 $cursor: #fff;
+
+$subMenuBg: #1f2d3d;
+$subMenuHover: #001528;
+$sideBarItemColor: #bfcdb9;
+$menuHover: #263445;
+
+$sideBarWidth: 210px;
