style: sidebar 背景色修改

--- a/src/assets/scss/sidebar.scss
+++ b/src/assets/scss/sidebar.scss
@@ -1,4 +1,15 @@
 #app {
+  .sidebar-container {
+    & .nest-menu .el-submenu > .el-submenu__title,
+    & .el-submenu .el-menu-item {
+      min-width: $sideBarWidth !important;
+      background-color: $subMenuBg !important;
+
+      &:hover {
+        background-color: $subMenuHover !important;
+      }
+    }
+  }
   .hidden-sidebar {
     .el-submenu {
       overflow: hidden;
