--- a/src/assets/scss/variable.scss
+++ b/src/assets/scss/variable.scss
@@ -2,8 +2,12 @@ $bg: #283443;
 $light_gray: #fff;
 $cursor: #fff;
 
+$menuBg: #304156;
+$menuHover: #263445;
+
 $subMenuBg: #1f2d3d;
 $subMenuHover: #001528;
+
 $sideBarItemColor: #bfcdb9;
 $menuHover: #263445;
 
