--- a/src/assets/scss/transition.scss
+++ b/src/assets/scss/transition.scss
@@ -7,13 +7,29 @@
 .breadcrumb-enter,
 .breadcrumb-leave-active {
   opacity: 0;
-  transform: translateX(-20px);
+  transform: translateX(20px);
 }
 
 .breadcrumb-move {
   transition: all 0.5s;
 }
 
-.breadcrumb-leave-active {
+.breadcrumb-leave-to {
   position: absolute;
+}
+
+/* app-main transition */
+.fade-transform-enter-active,
+.fade-transform-leave-active {
+  transition: all 0.5s;
+}
+
+.fade-transform-enter {
+  opacity: 0;
+  transform: translateX(-30px);
+}
+
+.fade-transform-leave-to {
+  opacity: 0;
+  transform: translateX(30px);
 }
